--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,6 +89,7 @@
   .kpi-sub { font-size: 11px; color: var(--text-muted); font-family: 'Share Tech Mono', monospace; }
   .main-grid { display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 16px; margin-bottom: 16px; }
   .bottom-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 16px; }
+  .bottom-grid .card { max-height: 320px; overflow: hidden; }
   .card { background: var(--bg-card); border: 1px solid var(--border); padding: 20px; position: relative; overflow: hidden; }
   .card::after { content: ''; position: absolute; top: 0; right: 0; width: 40px; height: 40px; background: linear-gradient(225deg, rgba(0,212,255,0.08), transparent); clip-path: polygon(100% 0, 0 0, 100% 100%); }
   .card-header { display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; }
@@ -123,7 +125,7 @@
   .card-scan::before { content: ''; position: absolute; top: -100%; left: 0; width: 100%; height: 2px; background: linear-gradient(90deg, transparent, var(--accent-cyan), transparent); opacity: 0.4; animation: scan 4s linear infinite; }
   @keyframes scan { 0% { top: -2px; } 100% { top: 100%; } }
   .month-panel { display: none; }
-  .month-panel.active { display: contents; }
+  .month-panel.active { display: block; }
   .ticker { background: rgba(0,212,255,0.05); border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); padding: 8px 0; overflow: hidden; margin-bottom: 24px; }
   .ticker-inner { display: flex; gap: 40px; animation: tickerScroll 20s linear infinite; white-space: nowrap; }
   .ticker-item { font-family: 'Share Tech Mono', monospace; font-size: 11px; color: var(--text-muted); letter-spacing: 1px; }
